# Proyecto2_Raycasting

./: CMakeLists.txt  README.md  imageloader.h  main.cpp  raycaster.h
assets/: mapB.txt  mapC.txt  mapita.txt
